<resources>
    <string name="app_name">Tip Time</string>
    <string name="oppukd">Rakibiniz UKD\'sini girin</string>
    <string name="ratingUser">Kendi UKD\'nizi girin</string>
    <string name="how_was_the_service">Maç Sonucunuz nedir?</string>
    <string name="amazing_service">Kazandım</string>
    <string name="good_service">Berabere</string>
    <string name="ok_service">Kaybettim</string>
    <string name="round_up_tip">UKD sonucunu yuvarla</string>
    <string name="calculate">Hesapla</string>
    <string name="rating_amount">UKD Değişimi: %s</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
</resources>